EFT index cursor save() implementation assumes the cursor is not already saved

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.2.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2021-11-15
    • 22
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The saveState() implementation in ephemeral_for_test_sorted_impl.cpp currently relies on the assumption that it is already in a saved state. This can lead to invariant failures if restoring the state of a PlanStage tree is unsuccessful and the tree has to be re-saved() and re-restored().

            Assignee:
            Ian Boros
            Reporter:
            Ian Boros
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: