SERVER-61173 Make EFT cursor saveState() handle case where already saved